fix: align cards at center of page verticallly

--- a/public/styles/containers.css
+++ b/public/styles/containers.css
@@ -17,6 +17,8 @@
 }
 
 .body-container {
+  display: flex;
+  align-items: center;
   position: relative;
   width: 100%;
   height: auto;
